[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/images/hatcher.png" type="Texture" id=1]
[ext_resource path="res://gameObjects/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/images/rope.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/click.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 10 )

[sub_resource type="CircleShape2D" id=2]
radius = 160.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )

[node name="PlayerCol" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10.5 )
shape = SubResource( 1 )

[node name="GrabArea" type="Area2D" parent="."]
position = Vector2( 0, -16 )

[node name="GrabAreaCol" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource( 2 )

[node name="HookPos" type="Position2D" parent="."]
position = Vector2( 0, -14 )

[node name="LinkSprite" type="Sprite" parent="HookPos"]
rotation = -1.15366
texture = ExtResource( 3 )
centered = false
offset = Vector2( -4, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 8, 8 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="LatchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="area_entered" from="GrabArea" to="." method="_on_GrabArea_area_entered"]
[connection signal="area_exited" from="GrabArea" to="." method="_on_GrabArea_area_exited"]
